--- a/_modules/jaxprop/perfect_gas/perfect_gas.html
+++ b/_modules/jaxprop/perfect_gas/perfect_gas.html
@@ -659,7 +659,7 @@ document.write(`
 <span class="sd">    Each entry: grads[prop] = jnp.array([∂prop/∂x, ∂prop/∂y])</span>
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="k">def</span><span class="w"> </span><span class="nf">f</span><span class="p">(</span><span class="n">vec</span><span class="p">):</span>
-        <span class="k">return</span> <span class="n">fluid</span><span class="o">.</span><span class="n">get_props</span><span class="p">(</span><span class="n">input_pair</span><span class="p">,</span> <span class="n">vec</span><span class="p">[</span><span class="mi">0</span><span class="p">],</span> <span class="n">vec</span><span class="p">[</span><span class="mi">1</span><span class="p">])</span>
+        <span class="k">return</span> <span class="n">fluid</span><span class="o">.</span><span class="n">get_state</span><span class="p">(</span><span class="n">input_pair</span><span class="p">,</span> <span class="n">vec</span><span class="p">[</span><span class="mi">0</span><span class="p">],</span> <span class="n">vec</span><span class="p">[</span><span class="mi">1</span><span class="p">])</span>
 
     <span class="c1"># JAX autodiff path</span>
     <span class="k">if</span> <span class="n">method</span> <span class="ow">in</span> <span class="p">(</span><span class="s2">&quot;auto&quot;</span><span class="p">,</span> <span class="s2">&quot;jax&quot;</span><span class="p">):</span>
