--- a/genindex.html
+++ b/genindex.html
@@ -331,13 +331,15 @@ document.write(`
 </li>
       <li><a href="source/api/jaxprop.math.html#jaxprop.math.arccosd">arccosd() (in module jaxprop.math)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="source/api/jaxprop.math.html#jaxprop.math.arcsind">arcsind() (in module jaxprop.math)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="source/api/jaxprop.math.html#jaxprop.math.arctand">arctand() (in module jaxprop.math)</a>
 </li>
       <li><a href="source/api/jaxprop.perfect_gas.perfect_gas.html#jaxprop.perfect_gas.perfect_gas.assemble_properties">assemble_properties() (in module jaxprop.perfect_gas.perfect_gas)</a>
+</li>
+      <li><a href="source/api/jaxprop.helpers_props.html#jaxprop.helpers_props.FluidState.at_index">at_index() (jaxprop.helpers_props.FluidState method)</a>
 </li>
       <li><a href="source/api/jaxprop.components.nozzle_model_solver.html#jaxprop.components.nozzle_model_solver.BVPSettings.atol">atol (jaxprop.components.nozzle_model_solver.BVPSettings attribute)</a>
 
@@ -429,8 +431,6 @@ document.write(`
 </li>
       <li><a href="source/api/jaxprop.coolprop.core_calculations.html#jaxprop.coolprop.core_calculations.compute_properties_metastable_rhoT">compute_properties_metastable_rhoT() (in module jaxprop.coolprop.core_calculations)</a>
 </li>
-      <li><a href="source/api/jaxprop.coolprop.fluid_properties.html#jaxprop.coolprop.fluid_properties.compute_property_grid">compute_property_grid() (in module jaxprop.coolprop.fluid_properties)</a>
-</li>
       <li><a href="source/api/jaxprop.coolprop.fluid_properties.html#jaxprop.coolprop.fluid_properties.compute_property_grid_rhoT">compute_property_grid_rhoT() (in module jaxprop.coolprop.fluid_properties)</a>
 </li>
       <li><a href="source/api/jaxprop.coolprop.fluid_properties.html#jaxprop.coolprop.fluid_properties.compute_pseudocritical_line">compute_pseudocritical_line() (in module jaxprop.coolprop.fluid_properties)</a>
@@ -512,6 +512,8 @@ document.write(`
       <li><a href="source/api/jaxprop.components.nozzle_model_solver.html#jaxprop.components.nozzle_model_solver.f64">f64() (in module jaxprop.components.nozzle_model_solver)</a>
 </li>
       <li><a href="source/api/jaxprop.components.nozzle_model_solver.html#jaxprop.components.nozzle_model_solver.find_maximum_mach">find_maximum_mach() (in module jaxprop.components.nozzle_model_solver)</a>
+</li>
+      <li><a href="source/api/jaxprop.helpers_props.html#jaxprop.helpers_props.FluidState.flipped">flipped() (jaxprop.helpers_props.FluidState method)</a>
 </li>
       <li><a href="source/api/jaxprop.coolprop.fluid_properties.html#jaxprop.coolprop.fluid_properties.Fluid">Fluid (class in jaxprop.coolprop.fluid_properties)</a>
 </li>
@@ -1013,10 +1015,10 @@ document.write(`
 </li>
       <li><a href="source/api/jaxprop.math.html#jaxprop.math.smooth_maximum">smooth_maximum() (in module jaxprop.math)</a>
 </li>
-      <li><a href="source/api/jaxprop.math.html#jaxprop.math.smooth_minimum">smooth_minimum() (in module jaxprop.math)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="source/api/jaxprop.math.html#jaxprop.math.smooth_minimum">smooth_minimum() (in module jaxprop.math)</a>
+</li>
       <li><a href="source/api/jaxprop.components.nozzle_model_solver.html#jaxprop.components.nozzle_model_solver.BVPSettings.solve_mode">solve_mode (jaxprop.components.nozzle_model_solver.BVPSettings attribute)</a>
 </li>
       <li><a href="source/api/jaxprop.components.nozzle_model_solver.html#jaxprop.components.nozzle_model_solver.solve_nozzle_model_collocation">solve_nozzle_model_collocation() (in module jaxprop.components.nozzle_model_solver)</a>
@@ -1032,10 +1034,6 @@ document.write(`
       <li><a href="source/api/jaxprop.components.nozzle_model_solver.html#jaxprop.components.nozzle_model_solver.split_z">split_z() (in module jaxprop.components.nozzle_model_solver)</a>
 </li>
       <li><a href="source/api/jaxprop.helpers_props.html#jaxprop.helpers_props.FluidState.stack">stack() (jaxprop.helpers_props.FluidState class method)</a>
-</li>
-      <li><a href="source/api/jaxprop.coolprop.fluid_properties.html#jaxprop.coolprop.fluid_properties.states_to_dict">states_to_dict() (in module jaxprop.coolprop.fluid_properties)</a>
-</li>
-      <li><a href="source/api/jaxprop.coolprop.fluid_properties.html#jaxprop.coolprop.fluid_properties.states_to_dict_2d">states_to_dict_2d() (in module jaxprop.coolprop.fluid_properties)</a>
 </li>
       <li><a href="source/api/jaxprop.helpers_props.html#jaxprop.helpers_props.FluidState.subcooling">subcooling (jaxprop.helpers_props.FluidState attribute)</a>
 </li>
