--- a/_modules/index.html
+++ b/_modules/index.html
@@ -7,7 +7,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Overview: module code &#8212; jaxprop v0.4.3 documentation</title>
+    <title>Overview: module code &#8212; jaxprop v0.5.0 documentation</title>
   
   
   
@@ -37,7 +37,7 @@
 <link rel="preload" as="script" href="../_static/scripts/pydata-sphinx-theme.js?digest=dfe6caa3a7d634c4db9b" />
   <script src="../_static/vendor/fontawesome/6.5.2/js/all.min.js?digest=dfe6caa3a7d634c4db9b"></script>
 
-    <script src="../_static/documentation_options.js?v=7a515c1e"></script>
+    <script src="../_static/documentation_options.js?v=91ffe994"></script>
     <script src="../_static/doctools.js?v=9a2dae69"></script>
     <script src="../_static/sphinx_highlight.js?v=dc90522c"></script>
     <script>let toggleHintShow = 'Click to show';</script>
@@ -140,7 +140,7 @@
   
   
   
-    <p class="title logo__title">jaxprop v0.4.3 documentation</p>
+    <p class="title logo__title">jaxprop v0.5.0 documentation</p>
   
 </a></div>
         <div class="sidebar-primary-item">
@@ -294,8 +294,6 @@ document.write(`
                   
   <h1>All modules for which code is available</h1>
 <ul><li><a href="jaxprop/bicubic/bicubic_interpolation.html">jaxprop.bicubic.bicubic_interpolation</a></li>
-<li><a href="jaxprop/components/nozzle_model_core.html">jaxprop.components.nozzle_model_core</a></li>
-<li><a href="jaxprop/components/nozzle_model_solver.html">jaxprop.components.nozzle_model_solver</a></li>
 <li><a href="jaxprop/coolprop/core_calculations.html">jaxprop.coolprop.core_calculations</a></li>
 <li><a href="jaxprop/coolprop/fluid_properties.html">jaxprop.coolprop.fluid_properties</a></li>
 <li><a href="jaxprop/coolprop/jax_wrapper.html">jaxprop.coolprop.jax_wrapper</a></li>
@@ -304,6 +302,7 @@ document.write(`
 <li><a href="jaxprop/helpers_props.html">jaxprop.helpers_props</a></li>
 <li><a href="jaxprop/math.html">jaxprop.math</a></li>
 <li><a href="jaxprop/perfect_gas/perfect_gas.html">jaxprop.perfect_gas.perfect_gas</a></li>
+<li><a href="jaxprop/two_component/mixture_calculations.html">jaxprop.two_component.mixture_calculations</a></li>
 <li><a href="jaxprop/utils.html">jaxprop.utils</a></li>
 </ul>
 
